--- a/Documentation/WIPs/Final_report/Evaluation.tex
+++ b/Documentation/WIPs/Final_report/Evaluation.tex
@@ -11,7 +11,26 @@
 
 \begin{document}
 \section{Evaluation}
-\subsection{Reflecting on requirements}
-\subsection{Tools}
-\subsection{}
+\subsection{Reflecting on process}
+made decisions late on in the process
+could have done more relevant research into certain areas
+questions for the hypothesis were formed late on into the process
+use of agile style development worked against the research project style
+\subsection{Reflecting on design, implementation and testing}
+Algorithms, had some naive designs, which later affected implementation
+stuff like the greedy approach
+Some of these mistakes were corrected partway through development but some were integrated/kept which had a lasting affect on the outcome of the project
+Documentation of design was poor, so many design ideas and decisions made early on, had nowhere to be solidly
+due to the design and implemenation issues the experiment also suffered, leaving the second hypothesis unanswered, needs a better, more efficient design for both algorithms
+
+
+\subsection{Reflection on tool usage}
+Github was use incosistantly at best
+the kanban board was not updated every week to deal with tasks brought up in the weekly meetings
+use of other tools generally good
+good use of 3rd party library
+\subsection{Research and report}
+
+
+
 \end{document}
