--- a/Documentation/WIPs/Final_report/Results_section.tex
+++ b/Documentation/WIPs/Final_report/Results_section.tex
@@ -12,8 +12,20 @@
 \begin{document}
 \section{Results and Conclusions}
 \subsection{Results from test program}
+Talk about general results from the test, further 
+Struggles/ issues caused by the experiment i.e large amount of failure and long run times for medium and up difficulties
+
 \subsection{Comparing methods}
+Evaluate the results showing data and statistical tests for both the 4x4 and 9x9 easy
+Look at each sub question
+\subsection{Conclusion for experiment 1}
+Get an overall summary for the main question of experiment
 \subsection{Comparing difficulty}
-\subsection{Conclusion for hypothesis 1}
+Reasons for experiment 2 overall failure
+likely to do with algorithms greedy approaches, meaning that they get stuck in inescapable incorrect solutions
+
+what we could find out if anything for each question
+also add speculation about the difficulty and the increased number of empty spaces causing the issue
+
 \subsection{Conclusion for hypothesis 2}
 \end{document}
