--- a/Documentation/WIPs/Final_report/Background_section.tex
+++ b/Documentation/WIPs/Final_report/Background_section.tex
@@ -15,7 +15,7 @@
 \section{Background}
 
 \subsection{Problem description}
-The logic based combinatorial number placement puzzle Sudoku, is a well-established puzzle game which grew popular in Japan in the 1980s. The classic game of Sudoku consists of a 9x9 grid of spaces, which can only be filled with numbers between 1 and 9. Each space in the 3x3 block, vertical and horizontal columns can only have each number between 1 and 9 once. The puzzle is completed when all spaces in the grid have been filled and no earlier rule has been violated. A more generic description of the puzzle, describes a grid of NxN in size, with N grids contained, using numbers between 1-N. []
+The logic based combinatorial number placement puzzle Sudoku is a well-established puzzle game which grew popular in Japan in the 1980s[]. The classic game of Sudoku consists of a 9x9 grid of spaces, which can only be filled with numbers between 1 and 9. Each space in the 3x3 block, vertical and horizontal columns can only have each number between 1 and 9 once. The puzzle is completed when all spaces in the grid have been filled and none of the rules have been violated. A more generic description of the puzzle, describes a grid of NxN in size, with N grids contained, using numbers between 1-N. []
 \begin{figure}[h]
 	\caption{Example Sudoku puzzle(left), Examples of different violations(right)}
 	\centering
@@ -23,9 +23,14 @@ The logic based combinatorial number placement puzzle Sudoku, is a well-establis
 \end{figure}
 
 \subsection{Background}
-Sudoku is a well established and solved puzzle, with a proven efficient way to be solved established. However, there are other admittedly less efficient AI methods which can be applied to solve this and provides an interesting way to apply and experiment with AI methods learnt at university to a real problem.\newline \newline
-Peter Norvig solved Sudoku [], using both constraint propagation and search, so the most efficient method is too established. However, looking at a book[], using a different heuristic search approach seems to be a better way, which has been used before but not fully explored was in there. \newline \newline
-Using evolutionary algorithms(EA), specifically based off the Russel/Norvig approach [] to solve seems like an interesting and most importantly different way to solve the problem, which can also solve several different size puzzles with some level of efficiency. Equally a normal evolutionary algorithm on its own will need some help to be able to solve the sudoku at all leaving several different options, this includes using different hybrid methods to add constraints to the problem, or having constraints included as part of the evolutionary algorithms fitness function.\newline\newline
+Sudoku is a well established and solved puzzle, with a proven efficient way to be solved established, such as backtracking and rule based algorithms. However, there are other admittedly less efficient AI methods which can be applied to solve this and provides an interesting way to apply and experiment with AI methods learnt at university to a real problem. Peter Norvig solved Sudoku [], using both constraint propagation and search, being another different method to solve sudoku. Looking in Artificial intelligence: A Modern Approach[] and on Google Scholar, using a different heuristic search approach seems to be a interesting, less explored way to solve Sudokus. \newline \newline
+
+Evolutionary algorithms, is a search method, that has not been used extensively in the field of solving sudoku, and seems to have some potential. Using evolutionary algorithms(EA), specifically based off the Russel/Norvig approach [] to solve seems like an interesting and most importantly different way to solve the problem, which can also solve several different size puzzles with some level of efficiency. Equally a normal evolutionary algorithm on its own will need some help to be able to solve the sudoku at all leaving several different options, this includes using different hybrid methods to add constraints to the problem, or having constraints included as part of the evolutionary algorithms fitness function.\newline\newline
+
+\subsection{Evolutionary algorithms}
+
+Evolutionary algorithms, is a large umbrella term for a set of population base
+
 EA has several terms that will be used throughout this report.\\
 \begin{itemize}
 	\item Population - The total number of individuals in the algorithm
